[gd_scene load_steps=7 format=3 uid="uid://1hqernw13xk1"]

[ext_resource type="Script" uid="uid://d15r2h407ojnx" path="res://Scripts/modules.gd" id="1_5clhy"]
[ext_resource type="PackedScene" uid="uid://druyojofl5kfq" path="res://PaintingScenes/PaintingOne.tscn" id="2_wqu58"]
[ext_resource type="PackedScene" uid="uid://bu0hb5eqv3brx" path="res://PaintingScenes/PaintingTwo.tscn" id="3_yu2ah"]

[sub_resource type="PlaneMesh" id="PlaneMesh_yu2ah"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5jv0a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5clhy"]

[node name="Canvas1" type="Node3D" groups=["Canvas"]]
script = ExtResource("1_5clhy")
paintings = Array[PackedScene]([ExtResource("2_wqu58"), ExtResource("3_yu2ah")])

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1.5, 0, 1, -6.55671e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_yu2ah")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_5jv0a")

[node name="HitBox" type="Area3D" parent="StaticBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/HitBox"]
shape = SubResource("BoxShape3D_5clhy")

[connection signal="area_entered" from="StaticBody3D/HitBox" to="." method="_on_hit_box_area_entered"]
