[gd_scene load_steps=6 format=3 uid="uid://dpjgjcup7kugf"]

[ext_resource type="Script" uid="uid://d15r2h407ojnx" path="res://Scripts/modules.gd" id="1_qfjj6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qfjj6"]

[sub_resource type="QuadMesh" id="QuadMesh_58rer"]
material = SubResource("StandardMaterial3D_qfjj6")
size = Vector2(2, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_sat42"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qfjj6"]

[node name="Canvas3" type="Node3D"]
script = ExtResource("1_qfjj6")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("QuadMesh_58rer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_sat42")

[node name="HitBox3" type="Area3D" parent="StaticBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/HitBox3"]
shape = SubResource("BoxShape3D_qfjj6")

[connection signal="area_entered" from="StaticBody3D/HitBox3" to="." method="_on_hit_box_3_area_entered"]
