[gd_scene load_steps=6 format=3 uid="uid://c4euft6u77gs7"]

[ext_resource type="Script" uid="uid://d15r2h407ojnx" path="res://Scripts/modules.gd" id="1_kyi68"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kyi68"]

[sub_resource type="QuadMesh" id="QuadMesh_yg5u5"]
material = SubResource("StandardMaterial3D_kyi68")
size = Vector2(2, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_0aqys"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kyi68"]

[node name="Canvas4" type="Node3D"]
script = ExtResource("1_kyi68")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("QuadMesh_yg5u5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_0aqys")

[node name="HitBox4" type="Area3D" parent="StaticBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/HitBox4"]
shape = SubResource("BoxShape3D_kyi68")

[connection signal="area_entered" from="StaticBody3D/HitBox4" to="." method="_on_hit_box_4_area_entered"]
